Fix overflowing image if it's large

--- a/components/custom-message.scss
+++ b/components/custom-message.scss
@@ -25,6 +25,8 @@
 .email-article__message-image {
 	display: flex;
 	width: 100%;
+	max-height: 200px;
+	overflow: hidden;
 	padding: 20px;
 	position: absolute;
 	box-sizing: border-box;
@@ -49,6 +51,7 @@
 		border-right: 1px solid getColor('black-30');
 		border-top-width: 0;
 		max-width: 200px;
+		max-height: initial;
 
 	}
 	.email-article__message-image + .email-article__message-textarea {
